@@ -55,68 +55,68 @@ import org.imgscalr.Scalr;
  */
 public class Scup {
 
-    /**
-     * Simple new version checking with incremental number
-     */
-    final static int VERSION = 3;
-    //
-    public static Clipboard clipboard;
-    public static JXTrayIcon trayIcon;
-    public static Point virtualOrigin;
-    public static Dimension virtualSize;
-    private static Preferences prefs;
-    /**
-     * 16x16 app icon
-     */
-    public static BufferedImage iconImage = null;
-    /**
-     * User configuration keys
-     */
-    public final static String KEY_FTP_SERVER = "FTP_SERVER";
-    public final static String KEY_FTP_USERNAME = "FTP_USERNAME";
-    public final static String KEY_FTP_PASSWORD = "FTP_PASSWORD";
-    public final static String KEY_DIRECTORY = "FTP_DIRECTORY";
-    public final static String KEY_URL = "URL";
-    public final static String KEY_UPLOAD = "UPLOAD";
-    public final static String KEY_MONITOR_ALL = "MONITOR_ALL";
-    public final static String KEY_INITIAL_SETTINGS = "INITIAL_SETTINGS";
-    /**
-     * FTP configuration variables
-     */
-    private static String FTP_SERVER, FTP_USERNAME, FTP_PASSWORD, FTP_DIRECTORY, URL;
-    /**
-     * Flag which enable upload to FTP server
-     */
-    public static boolean UPLOAD;
-    /**
-     * Flag which enable capture images from all sources, not only printscreen
-     */
-    public static boolean MONITOR_ALL;
-    /**
-     * Flag indicates initial settings
-     */
-    private static boolean INITIAL_SETTINGS;
-    /**
-     * Tray Popup menu items
-     */
-    private static JCheckBoxMenuItem uploadEnabledCheckBox;
-    private static JCheckBoxMenuItem monitorAllCheckBox;
-    private static JMenu historySubmenu;
-    private static ActionListener trayIconActionListener = null;
+  /**
+   * Simple new version checking with incremental number
+   */
+  final static int VERSION = 3;
+  //
+  public static Clipboard clipboard;
+  public static JXTrayIcon trayIcon;
+  public static Point virtualOrigin;
+  public static Dimension virtualSize;
+  private static Preferences prefs;
+  /**
+   * 16x16 app icon
+   */
+  public static BufferedImage iconImage = null;
+  /**
+   * User configuration keys
+   */
+  public final static String KEY_FTP_SERVER = "FTP_SERVER";
+  public final static String KEY_FTP_USERNAME = "FTP_USERNAME";
+  public final static String KEY_FTP_PASSWORD = "FTP_PASSWORD";
+  public final static String KEY_DIRECTORY = "FTP_DIRECTORY";
+  public final static String KEY_URL = "URL";
+  public final static String KEY_UPLOAD = "UPLOAD";
+  public final static String KEY_MONITOR_ALL = "MONITOR_ALL";
+  public final static String KEY_INITIAL_SETTINGS = "INITIAL_SETTINGS";
+  /**
+   * FTP configuration variables
+   */
+  private static String FTP_SERVER, FTP_USERNAME, FTP_PASSWORD, FTP_DIRECTORY, URL;
+  /**
+   * Flag which enable upload to FTP server
+   */
+  public static boolean UPLOAD;
+  /**
+   * Flag which enable capture images from all sources, not only printscreen
+   */
+  public static boolean MONITOR_ALL;
+  /**
+   * Flag indicates initial settings
+   */
+  private static boolean INITIAL_SETTINGS;
+  /**
+   * Tray Popup menu items
+   */
+  private static JCheckBoxMenuItem uploadEnabledCheckBox;
+  private static JCheckBoxMenuItem monitorAllCheckBox;
+  private static JMenu historySubmenu;
+  private static ActionListener trayIconActionListener = null;
 
-    /**
-     * Startup initialization, then endless Thread sleep
-     *
-     * @param args not used yet
-     * @throws InterruptedException
-     */
-    public static void main(String[] args) throws InterruptedException {
+  /**
+   * Startup initialization, then endless Thread sleep
+   *
+   * @param args not used yet
+   * @throws InterruptedException
+   */
+  public static void main(String[] args) throws InterruptedException {
 	// Set system windows theme and load default icon
 	try {
-	    UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
-	    iconImage = ImageIO.read(Scup.class.getResource("/icon.png"));
+	  UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
+	  iconImage = ImageIO.read(Scup.class.getResource("/icon.png"));
 	} catch (Exception ex) {
-	    ex.printStackTrace();
+	  ex.printStackTrace();
 	}
 	// Read configuration
 	prefs = Preferences.userNodeForPackage(cz.matejsimek.scup.Scup.class);
@@ -133,246 +133,246 @@ public class Scup {
 	checkForUpdates();
 	// Show configuration form on startup until first save
 	if (INITIAL_SETTINGS) {
-	    new SettingsForm().setVisible(true);
+	  new SettingsForm().setVisible(true);
 	}
 
 	// Endless program run, events are handled in EDT thread
 	while (true) {
-	    Thread.sleep(Long.MAX_VALUE);
+	  Thread.sleep(Long.MAX_VALUE);
 	}
-    }
+  }
 
-    /**
-     * Simple new version checking with incremental number under on url
-     */
-    static private void checkForUpdates() {
+  /**
+   * Simple new version checking with incremental number under on url
+   */
+  static private void checkForUpdates() {
 	System.out.println("Checking for updates...");
 
 	try {
-	    final URI projectURL = new URI("https://github.com/enzy/Scup");
-	    final URL url = new URL("https://raw.github.com/enzy/Scup/master/version.txt");
-	    BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
+	  final URI projectURL = new URI("https://github.com/enzy/Scup");
+	  final URL url = new URL("https://raw.github.com/enzy/Scup/master/version.txt");
+	  BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
 
-	    String inputLine = in.readLine();
-	    if (inputLine != null) {
+	  String inputLine = in.readLine();
+	  if (inputLine != null) {
 		int remoteVersion = Integer.parseInt(inputLine);
 		System.out.println("Found version " + remoteVersion + ", your is " + VERSION);
 
 		if (remoteVersion > VERSION) {
-		    System.out.println("New version available! Get it at: " + projectURL);
-		    // Create option dialog
-		    JOptionPane pane = new JOptionPane("New version is available. Download it now?", JOptionPane.PLAIN_MESSAGE, JOptionPane.YES_NO_OPTION);
-		    JDialog dialog = pane.createDialog(new JFrame(), "Scup - Update check");
-		    dialog.setIconImage(iconImage);
-		    dialog.setAlwaysOnTop(true);
-		    dialog.setVisible(true);
-		    // Get user choice
-		    Object obj = pane.getValue();
-		    // Open browser on project page on yes and close program
-		    if (obj != null && !obj.equals(JOptionPane.UNINITIALIZED_VALUE) && (Integer) obj == 0) {
+		  System.out.println("New version available! Get it at: " + projectURL);
+		  // Create option dialog
+		  JOptionPane pane = new JOptionPane("New version is available. Download it now?", JOptionPane.PLAIN_MESSAGE, JOptionPane.YES_NO_OPTION);
+		  JDialog dialog = pane.createDialog(new JFrame(), "Scup - Update check");
+		  dialog.setIconImage(iconImage);
+		  dialog.setAlwaysOnTop(true);
+		  dialog.setVisible(true);
+		  // Get user choice
+		  Object obj = pane.getValue();
+		  // Open browser on project page on yes and close program
+		  if (obj != null && !obj.equals(JOptionPane.UNINITIALIZED_VALUE) && (Integer) obj == 0) {
 			if (openBrowserOn(projectURL)) {
-			    System.exit(0);
+			  System.exit(0);
 			}
-		    }
+		  }
 		} else {
-		    System.out.println("You have the latest version.");
+		  System.out.println("You have the latest version.");
 		}
-	    }
+	  }
 
-	    in.close();
+	  in.close();
 
 	} catch (Exception ex) {
-	    System.err.println("Check for updates failed.");
-	    ex.printStackTrace();
+	  System.err.println("Check for updates failed.");
+	  ex.printStackTrace();
 	}
-    }
+  }
 
-    /**
-     * Open default system browser on given URI
-     *
-     * @param uri
-     * @return true if operation was successful
-     */
-    static private boolean openBrowserOn(URI uri) {
+  /**
+   * Open default system browser on given URI
+   *
+   * @param uri
+   * @return true if operation was successful
+   */
+  static private boolean openBrowserOn(URI uri) {
 	if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE)) {
-	    try {
+	  try {
 		Desktop.getDesktop().browse(uri);
 		return true;
-	    } catch (Exception ex) {
+	  } catch (Exception ex) {
 		System.err.println("Error while opening browser");
 		ex.printStackTrace();
-	    }
+	  }
 	}
 	return false;
-    }
+  }
 
-    /**
-     * Open given file with default associated program
-     *
-     * @param filepath
-     * @return
-     */
-    static private boolean openOnFile(String filepath) {
+  /**
+   * Open given file with default associated program
+   *
+   * @param filepath
+   * @return
+   */
+  static private boolean openOnFile(String filepath) {
 	if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.OPEN)) {
-	    try {
+	  try {
 		Desktop.getDesktop().open(new File(filepath));
 		return true;
-	    } catch (Exception ex) {
+	  } catch (Exception ex) {
 		System.err.println("Error while opening file with associated program");
 		ex.printStackTrace();
-	    }
+	  }
 	}
 	return false;
-    }
+  }
 
-    /**
-     * Detect dimensions of virtual space and save them to
-     * <code>Dimension virtualSize</code> and
-     * <code>Point virtualOrigin</code>
-     */
-    static private void detectVirtualDimensions() {
+  /**
+   * Detect dimensions of virtual space and save them to
+   * <code>Dimension virtualSize</code> and
+   * <code>Point virtualOrigin</code>
+   */
+  static private void detectVirtualDimensions() {
 	GraphicsEnvironment ge;
 	ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
 	Rectangle vBounds = new Rectangle();
 	GraphicsDevice[] gdArray = ge.getScreenDevices();
 
 	for (int i = 0; i < gdArray.length; i++) {
-	    GraphicsDevice gd = gdArray[i];
+	  GraphicsDevice gd = gdArray[i];
 
-	    GraphicsConfiguration[] gcArray = gd.getConfigurations();
+	  GraphicsConfiguration[] gcArray = gd.getConfigurations();
 
-	    for (int j = 0; j < gcArray.length; j++) {
+	  for (int j = 0; j < gcArray.length; j++) {
 		vBounds = vBounds.union(gcArray[j].getBounds());
-	    }
+	  }
 	}
 
 	virtualOrigin = vBounds.getLocation();
 	virtualSize = vBounds.getSize();
-    }
+  }
 
-    /**
-     * Place app icon into system tray, build popupmenu and attach event
-     * handlers to items
-     */
-    static private void initTray() {
+  /**
+   * Place app icon into system tray, build popupmenu and attach event handlers
+   * to items
+   */
+  static private void initTray() {
 	if (SystemTray.isSupported()) {
-	    final SystemTray tray = SystemTray.getSystemTray();
-	    // Different trayicon sizes, prefer downscalling
-	    String icoVersion;
-	    int icoWidth = tray.getTrayIconSize().width;
-	    if (icoWidth <= 16) {
+	  final SystemTray tray = SystemTray.getSystemTray();
+	  // Different trayicon sizes, prefer downscalling
+	  String icoVersion;
+	  int icoWidth = tray.getTrayIconSize().width;
+	  if (icoWidth <= 16) {
 		icoVersion = "";
-	    } else if (icoWidth <= 24) {
+	  } else if (icoWidth <= 24) {
 		icoVersion = "24";
-	    } else if (icoWidth <= 32) {
+	  } else if (icoWidth <= 32) {
 		icoVersion = "32";
-	    } else if (icoWidth <= 48) {
+	  } else if (icoWidth <= 48) {
 		icoVersion = "48";
-	    } else if (icoWidth <= 64) {
+	  } else if (icoWidth <= 64) {
 		icoVersion = "64";
-	    } else if (icoWidth <= 96) {
+	  } else if (icoWidth <= 96) {
 		icoVersion = "96";
-	    } else if (icoWidth <= 128) {
+	  } else if (icoWidth <= 128) {
 		icoVersion = "128";
-	    } else if (icoWidth <= 256) {
+	  } else if (icoWidth <= 256) {
 		icoVersion = "256";
-	    } else {
+	  } else {
 		icoVersion = "512";
-	    }
-	    // Load tray icon
-	    try {
+	  }
+	  // Load tray icon
+	  try {
 		trayIcon = new JXTrayIcon(ImageIO.read(Scup.class.getResource("/icon" + icoVersion + ".png")));
 		trayIcon.setToolTip("Scup v" + VERSION);
 		trayIcon.setImageAutoSize(true);
-	    } catch (IOException ex) {
+	  } catch (IOException ex) {
 		System.err.println("IOException: TrayIcon could not be added.");
 		System.exit(1);
-	    }
-	    // Add tray icon to system tray
-	    try {
+	  }
+	  // Add tray icon to system tray
+	  try {
 		tray.add(trayIcon);
-	    } catch (AWTException e) {
+	  } catch (AWTException e) {
 		System.err.println("AWTException: TrayIcon could not be added.");
 		System.exit(1);
-	    }
-	    // Build popup menu showed on trayicon right click (on Windows)
-	    final JPopupMenu jpopup = new JPopupMenu();
+	  }
+	  // Build popup menu showed on trayicon right click (on Windows)
+	  final JPopupMenu jpopup = new JPopupMenu();
 
-	    JMenuItem settingsItem = new JMenuItem("Settings...");
-	    uploadEnabledCheckBox = new JCheckBoxMenuItem("Upload to FTP");
-	    monitorAllCheckBox = new JCheckBoxMenuItem("Monitor all");
-	    historySubmenu = new JMenu("History");
-	    JMenuItem exitItem = new JMenuItem("Exit");
+	  JMenuItem settingsItem = new JMenuItem("Settings...");
+	  uploadEnabledCheckBox = new JCheckBoxMenuItem("Upload to FTP");
+	  monitorAllCheckBox = new JCheckBoxMenuItem("Monitor all");
+	  historySubmenu = new JMenu("History");
+	  JMenuItem exitItem = new JMenuItem("Exit");
 
-	    jpopup.add(settingsItem);
-	    jpopup.add(uploadEnabledCheckBox);
-	    jpopup.add(monitorAllCheckBox);
-	    jpopup.addSeparator();
-	    jpopup.add(historySubmenu);
-	    jpopup.addSeparator();
-	    jpopup.add(exitItem);
-	    // Add popup to tray
-	    trayIcon.setJPopupMenu(jpopup);
-	    // Set default flags
-	    uploadEnabledCheckBox.setState(UPLOAD);
-	    monitorAllCheckBox.setState(MONITOR_ALL);
-	    historySubmenu.setEnabled(false);
+	  jpopup.add(settingsItem);
+	  jpopup.add(uploadEnabledCheckBox);
+	  jpopup.add(monitorAllCheckBox);
+	  jpopup.addSeparator();
+	  jpopup.add(historySubmenu);
+	  jpopup.addSeparator();
+	  jpopup.add(exitItem);
+	  // Add popup to tray
+	  trayIcon.setJPopupMenu(jpopup);
+	  // Set default flags
+	  uploadEnabledCheckBox.setState(UPLOAD);
+	  monitorAllCheckBox.setState(MONITOR_ALL);
+	  historySubmenu.setEnabled(false);
 
-	    // Add listener to settingsItem.
-	    settingsItem.addActionListener(new ActionListener() {
+	  // Add listener to settingsItem.
+	  settingsItem.addActionListener(new ActionListener() {
 		public void actionPerformed(ActionEvent e) {
-		    new SettingsForm().setVisible(true);
+		  new SettingsForm().setVisible(true);
 		}
-	    });
+	  });
 
-	    // Add listener to uploadEnabledCheckBox
-	    uploadEnabledCheckBox.addItemListener(new ItemListener() {
+	  // Add listener to uploadEnabledCheckBox
+	  uploadEnabledCheckBox.addItemListener(new ItemListener() {
 		public void itemStateChanged(ItemEvent e) {
-		    int chxbx = e.getStateChange();
-		    if (chxbx == ItemEvent.SELECTED) {
+		  int chxbx = e.getStateChange();
+		  if (chxbx == ItemEvent.SELECTED) {
 			UPLOAD = true;
-		    } else {
+		  } else {
 			UPLOAD = false;
-		    }
-		    prefs.putBoolean(KEY_UPLOAD, UPLOAD);
+		  }
+		  prefs.putBoolean(KEY_UPLOAD, UPLOAD);
 		}
-	    });
+	  });
 
-	    // Add listener to monitorAllCheckBox
-	    monitorAllCheckBox.addItemListener(new ItemListener() {
+	  // Add listener to monitorAllCheckBox
+	  monitorAllCheckBox.addItemListener(new ItemListener() {
 		public void itemStateChanged(ItemEvent e) {
-		    int chxbx = e.getStateChange();
-		    if (chxbx == ItemEvent.SELECTED) {
+		  int chxbx = e.getStateChange();
+		  if (chxbx == ItemEvent.SELECTED) {
 			MONITOR_ALL = true;
-		    } else {
+		  } else {
 			MONITOR_ALL = false;
-		    }
-		    prefs.putBoolean(KEY_MONITOR_ALL, MONITOR_ALL);
+		  }
+		  prefs.putBoolean(KEY_MONITOR_ALL, MONITOR_ALL);
 		}
-	    });
+	  });
 
-	    // Add listener to exitItem.
-	    exitItem.addActionListener(new ActionListener() {
+	  // Add listener to exitItem.
+	  exitItem.addActionListener(new ActionListener() {
 		public void actionPerformed(ActionEvent e) {
-		    tray.remove(trayIcon);
-		    System.exit(0);
+		  tray.remove(trayIcon);
+		  System.exit(0);
 		}
-	    });
+	  });
 
-	    trayIcon.displayMessage("Scup", "I am here to serve", TrayIcon.MessageType.NONE);
+	  trayIcon.displayMessage("Scup", "I am here to serve", TrayIcon.MessageType.NONE);
 	} else {
-	    System.err.println("SystemTray is not supported");
+	  System.err.println("SystemTray is not supported");
 	}
-    }
+  }
 
-    /**
-     * Fills class varibles:
-     * <code>FTP_SERVER, FTP_USERNAME, FTP_PASSWORD,
-     * FTP_DIRECTORY, URL, UPLOAD, MONITOR_ALL</code>
-     *
-     * @param filename to read configuration from
-     */
-    static private void readConfiguration(/*String filename*/) {
+  /**
+   * Fills class varibles:
+   * <code>FTP_SERVER, FTP_USERNAME, FTP_PASSWORD,
+   * FTP_DIRECTORY, URL, UPLOAD, MONITOR_ALL</code>
+   *
+   * @param filename to read configuration from
+   */
+  static private void readConfiguration(/*String filename*/) {
 	// Load config
 	FTP_SERVER = prefs.get(KEY_FTP_SERVER, "localhost");
 	FTP_USERNAME = prefs.get(KEY_FTP_USERNAME, "anonymous");
@@ -382,279 +382,279 @@ public class Scup {
 	UPLOAD = prefs.getBoolean(KEY_UPLOAD, false);
 	MONITOR_ALL = prefs.getBoolean(KEY_MONITOR_ALL, true);
 	INITIAL_SETTINGS = prefs.getBoolean(KEY_INITIAL_SETTINGS, true);
-    }
+  }
 
-    public static void reloadConfiguration() {
+  public static void reloadConfiguration() {
 	readConfiguration();
 	uploadEnabledCheckBox.setState(UPLOAD);
 	monitorAllCheckBox.setState(MONITOR_ALL);
-    }
+  }
 
-    /**
-     * Whole image handling process - display, crop, save on disk, transfer to
-     * FTP, copy its URL to clipboard
-     *
-     * @param image to process
-     * @param cropImage should be image cropped?
-     * @param device to display image on
-     */
-    static void processImage(BufferedImage image, boolean cropImage, GraphicsDevice device) {
+  /**
+   * Whole image handling process - display, crop, save on disk, transfer to
+   * FTP, copy its URL to clipboard
+   *
+   * @param image to process
+   * @param cropImage should be image cropped?
+   * @param device to display image on
+   */
+  static void processImage(BufferedImage image, boolean cropImage, GraphicsDevice device) {
 	System.out.println("Processing image...");
 	System.out.println("Image: " + image.getWidth() + "x" + image.getHeight());
 
 	if (cropImage) {
-	    image = cropImage(image, device);
+	  image = cropImage(image, device);
 	}
 	if (image == null) {
-	    System.out.println("Image is empty, canceling");
-	    return;
+	  System.out.println("Image is empty, canceling");
+	  return;
 	}
 
 	File imageFile = saveImageToFile(image);
 
 	if (UPLOAD) {
-	    // Transer image to FTP
-	    System.out.println("Uploading image to FTP server...");
-	    // FTP file upload service
-	    FileUpload fileupload = new FileUpload(FTP_SERVER, FTP_USERNAME, FTP_PASSWORD, FTP_DIRECTORY);
-	    if (fileupload.uploadFile(imageFile, imageFile.getName())) {
+	  // Transer image to FTP
+	  System.out.println("Uploading image to FTP server...");
+	  // FTP file upload service
+	  FileUpload fileupload = new FileUpload(FTP_SERVER, FTP_USERNAME, FTP_PASSWORD, FTP_DIRECTORY);
+	  if (fileupload.uploadFile(imageFile, imageFile.getName())) {
 		System.out.println("Upload done");
 		// Generate URL
 		final String url = (URL.endsWith("/") ? URL : URL + "/") + imageFile.getName();
 		System.out.println(url);
 		// Copy URL to clipboard
 		try {
-		    clipboard.setContents(new StringSelection(url), null);
+		  clipboard.setContents(new StringSelection(url), null);
 		} catch (IllegalStateException e) {
-		    System.err.println("Can't set clipboard, sorry!");
+		  System.err.println("Can't set clipboard, sorry!");
 		}
 		// Notify me about it
 		trayIcon.displayMessage("Image uploaded", url, TrayIcon.MessageType.INFO);
 
 		// Display last uploaded image
 		switchTrayIconActionListenerTo(new ActionListener() {
-		    public void actionPerformed(ActionEvent e) {
+		  public void actionPerformed(ActionEvent e) {
 			System.out.println("Last image URL " + url);
 			trayIcon.displayMessage("Last image URL", url, TrayIcon.MessageType.INFO);
 			setClipboard(url);
-		    }
+		  }
 		});
 		// Save it to history
 		addImageToHistory(image, url, false);
-	    } else {
+	  } else {
 		// Upload failed, it happens
 		System.err.println("Upload failed");
 		trayIcon.displayMessage("Upload failed", "I can not serve, sorry", TrayIcon.MessageType.ERROR);
-	    }
-	    // Don't keep copy of already uploaded image
-	    imageFile.delete();
+	  }
+	  // Don't keep copy of already uploaded image
+	  imageFile.delete();
 	} else {
-	    // Copy URL to clipboard
-	    final String imageAbsolutePath = imageFile.getAbsolutePath();
-	    try {
+	  // Copy URL to clipboard
+	  final String imageAbsolutePath = imageFile.getAbsolutePath();
+	  try {
 		clipboard.setContents(new StringSelection(imageAbsolutePath), null);
-	    } catch (IllegalStateException e) {
+	  } catch (IllegalStateException e) {
 		System.err.println("Can't set clipboard, sorry!");
-	    }
-	    // Notify user about it
-	    System.out.println("Image saved " + imageAbsolutePath);
-	    trayIcon.displayMessage("Image saved", imageAbsolutePath, TrayIcon.MessageType.INFO);
+	  }
+	  // Notify user about it
+	  System.out.println("Image saved " + imageAbsolutePath);
+	  trayIcon.displayMessage("Image saved", imageAbsolutePath, TrayIcon.MessageType.INFO);
 
-	    // Display last uploaded image
-	    switchTrayIconActionListenerTo(new ActionListener() {
+	  // Display last uploaded image
+	  switchTrayIconActionListenerTo(new ActionListener() {
 		public void actionPerformed(ActionEvent e) {
-		    System.out.println("Last image path " + imageAbsolutePath);
-		    trayIcon.displayMessage("Last image path", imageAbsolutePath, TrayIcon.MessageType.INFO);
-		    setClipboard(imageAbsolutePath);
+		  System.out.println("Last image path " + imageAbsolutePath);
+		  trayIcon.displayMessage("Last image path", imageAbsolutePath, TrayIcon.MessageType.INFO);
+		  setClipboard(imageAbsolutePath);
 		}
-	    });
+	  });
 
-	    // Save it to history
-	    addImageToHistory(image, imageAbsolutePath, true);
+	  // Save it to history
+	  addImageToHistory(image, imageAbsolutePath, true);
 	}
 
 	image.flush();
 	image = null;
 	imageFile = null;
 	System.gc();
-    }
+  }
 
-    /**
-     * Adds image into history submenu
-     *
-     * @param image
-     * @param path
-     */
-    static private void addImageToHistory(BufferedImage image, final String path, final boolean isLocalFile) {
+  /**
+   * Adds image into history submenu
+   *
+   * @param image
+   * @param path
+   */
+  static private void addImageToHistory(BufferedImage image, final String path, final boolean isLocalFile) {
 	BufferedImage scaled;
 	// Resize image to usable dimensions
 	if (image.getWidth() > 140 || image.getHeight() > 80) {
-	    scaled = Scalr.resize(image, 140, 80);
+	  scaled = Scalr.resize(image, 140, 80);
 	} else {
-	    scaled = image;
+	  scaled = image;
 	}
 	// Rape JMenuItem with big image
 	JMenuItem item = new JMenuItem(path, new ImageIcon(scaled));
 	// Copy path on click
 	item.addActionListener(new ActionListener() {
-	    public void actionPerformed(ActionEvent e) {
+	  public void actionPerformed(ActionEvent e) {
 		setClipboard(path);
-	    }
+	  }
 	});
 
 	// Open browser/program on CTRL+click
 	item.addMouseListener(new MouseAdapter() {
-	    @Override
-	    public void mouseReleased(MouseEvent e) {
+	  @Override
+	  public void mouseReleased(MouseEvent e) {
 		if (e.isControlDown()) {
-		    if (isLocalFile) {
+		  if (isLocalFile) {
 			openOnFile(path);
-		    } else {
+		  } else {
 			openBrowserOn(URI.create(path));
-		    }
+		  }
 		}
-	    }
+	  }
 	});
 	// Finally add item to submenu
 	historySubmenu.add(item);
 	historySubmenu.setEnabled(true);
 	// Clean old items
-	if(historySubmenu.getItemCount() > 5){
-	    historySubmenu.remove(0);
+	if (historySubmenu.getItemCount() > 5) {
+	  historySubmenu.remove(0);
 	}
-    }
+  }
 
-    /**
-     * Copy given String to system clipboard (could fail)
-     *
-     * @param str string to copy
-     */
-    static void setClipboard(String str) {
+  /**
+   * Copy given String to system clipboard (could fail)
+   *
+   * @param str string to copy
+   */
+  static void setClipboard(String str) {
 	try {
-	    clipboard.setContents(new StringSelection(str), null);
+	  clipboard.setContents(new StringSelection(str), null);
 	} catch (IllegalStateException ex) {
-	    System.err.println("Can't set clipboard, sorry!");
+	  System.err.println("Can't set clipboard, sorry!");
 	}
-    }
+  }
 
-    /**
-     * Assure there is only one action listener on tratIcon
-     *
-     * @param newListener to switch
-     */
-    static void switchTrayIconActionListenerTo(ActionListener newListener) {
+  /**
+   * Assure there is only one action listener on tratIcon
+   *
+   * @param newListener to switch
+   */
+  static void switchTrayIconActionListenerTo(ActionListener newListener) {
 	if (trayIconActionListener != null) {
-	    trayIcon.removeActionListener(trayIconActionListener);
+	  trayIcon.removeActionListener(trayIconActionListener);
 	}
 	trayIconActionListener = newListener;
 	trayIcon.addActionListener(trayIconActionListener);
-    }
+  }
 
-    /**
-     * Display image full screen and crop it by user celection
-     *
-     * @param image to crop
-     * @param device to display image on
-     * @return cropped image or null in case of crop cancel
-     */
-    static BufferedImage cropImage(BufferedImage image, GraphicsDevice device) {
+  /**
+   * Display image full screen and crop it by user celection
+   *
+   * @param image to crop
+   * @param device to display image on
+   * @return cropped image or null in case of crop cancel
+   */
+  static BufferedImage cropImage(BufferedImage image, GraphicsDevice device) {
 	CountDownLatch framerun = new CountDownLatch(1);
 	FullscreenFrame fullscreenFrame = new FullscreenFrame(framerun, image);
 	fullscreenFrame.setVisible(true);
 
 	if (device.isFullScreenSupported()) {
-	    device.setFullScreenWindow(fullscreenFrame);
+	  device.setFullScreenWindow(fullscreenFrame);
 	} else {
-	    System.err.println("FullScreen is not supported");
+	  System.err.println("FullScreen is not supported");
 	}
 
 	try {
-	    framerun.await();
+	  framerun.await();
 	} catch (InterruptedException ex) {
-	    ex.printStackTrace();
+	  ex.printStackTrace();
 	}
 
 	// When its closed, get cropped image
 	if (fullscreenFrame.isImageCropped()) {
-	    image = fullscreenFrame.getCroppedImage();
+	  image = fullscreenFrame.getCroppedImage();
 	} else {
-	    image = null;
+	  image = null;
 	}
 	fullscreenFrame.dispose();
 
 	return image;
-    }
+  }
 
-    /**
-     * @TODO, actually only prints file list
-     *
-     * @param files
-     */
-    static void processFiles(List<File> files) {
+  /**
+   * @TODO, actually only prints file list
+   *
+   * @param files
+   */
+  static void processFiles(List<File> files) {
 	System.out.println("Processing files...");
 	for (int i = 0; i < files.size(); i++) {
-	    System.out.println("File " + i + ": " + files.get(i).getName());
+	  System.out.println("File " + i + ": " + files.get(i).getName());
 	}
 	System.err.println("Not supported feature yet, stay tuned!");
-    }
+  }
 
-    /**
-     * Save image to PNG file named by its content hash into current directory
-     *
-     * @param img
-     * @return
-     */
-    static File saveImageToFile(BufferedImage img) {
+  /**
+   * Save image to PNG file named by its content hash into current directory
+   *
+   * @param img
+   * @return
+   */
+  static File saveImageToFile(BufferedImage img) {
 	try {
-	    ByteArrayOutputStream baos = new ByteArrayOutputStream();
-	    BufferedOutputStream bos = new BufferedOutputStream(baos);
-	    ImageIO.write(img, "png", bos);
-	    // Calculate hash for filename and cut hash to smaller size
-	    String hash = generateHash(baos.toByteArray());
-	    String filename = hash.substring(0, 10);
-	    // Close streams
-	    bos.flush();
-	    bos.close();
-	    baos.close();
+	  ByteArrayOutputStream baos = new ByteArrayOutputStream();
+	  BufferedOutputStream bos = new BufferedOutputStream(baos);
+	  ImageIO.write(img, "png", bos);
+	  // Calculate hash for filename and cut hash to smaller size
+	  String hash = generateHash(baos.toByteArray());
+	  String filename = hash.substring(0, 10);
+	  // Close streams
+	  bos.flush();
+	  bos.close();
+	  baos.close();
 
-	    //
-	    System.out.println("Saving image: " + filename + ".png");
-	    File outputfile = new File(filename + ".png");
-	    BufferedOutputStream bos2 = new BufferedOutputStream(new FileOutputStream(outputfile));
-	    ImageIO.write(img, "png", bos2);
-	    bos2.flush();
-	    bos2.close();
+	  //
+	  System.out.println("Saving image: " + filename + ".png");
+	  File outputfile = new File(filename + ".png");
+	  BufferedOutputStream bos2 = new BufferedOutputStream(new FileOutputStream(outputfile));
+	  ImageIO.write(img, "png", bos2);
+	  bos2.flush();
+	  bos2.close();
 
-	    return outputfile;
+	  return outputfile;
 
 	} catch (IOException ex) {
-	    System.err.println("Can't write image to file!");
+	  System.err.println("Can't write image to file!");
 	}
 	return null;
-    }
+  }
 
-    /**
-     * Generate SHA has from given data
-     *
-     * @param data Array of bytes to calculate hash from
-     * @return SHA hash from data or currentTimeMillis in case of error
-     */
-    static String generateHash(byte[] data) {
+  /**
+   * Generate SHA has from given data
+   *
+   * @param data Array of bytes to calculate hash from
+   * @return SHA hash from data or currentTimeMillis in case of error
+   */
+  static String generateHash(byte[] data) {
 	try {
-	    MessageDigest md = MessageDigest.getInstance("SHA");
-	    md.update(data);
+	  MessageDigest md = MessageDigest.getInstance("SHA");
+	  md.update(data);
 
-	    Formatter formatter = new Formatter();
-	    for (byte b : md.digest()) {
+	  Formatter formatter = new Formatter();
+	  for (byte b : md.digest()) {
 		formatter.format("%02x", b);
-	    }
+	  }
 
-	    return formatter.toString();
+	  return formatter.toString();
 
 	} catch (NoSuchAlgorithmException ex) {
-	    System.err.println("Can't load digest algorithm!");
+	  System.err.println("Can't load digest algorithm!");
 	}
 
 	return Long.toString(System.currentTimeMillis());
-    }
+  }
 }
